Ajout de la lecture de fichiers CSV pour les faits et pour les règles